# cio_verify_face

./: .gitignore  README.md  doc.rar
client/: .gitignore  README.md  package.json
client/apps/device-app/: .env-example  index.html  package.json  vite.config.ts
client/apps/employee-portal/: FEATURES.md  README.md  index.html  package.json  vite.config.ts
client/apps/system-admin/: index.html  package.json  vite.config.ts
client/apps/web-admin/: .env.example  CHANGELOG.md  CHECK_SETUP.js  CONTRIBUTING.md  DOCS_INDEX.md  DROPDOWN_DEMO.sh  GIT_COMMIT_MESSAGE.sh  MIGRATION_GUIDE.md  PHASE4_IMPLEMENTATION.md  PROJECT_STATUS.sh  QUICK_START.md  README.md  README_REFACTORING.txt  README_old.md  SETUP.bat  SETUP.ps1  SETUP.sh  SETUP_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
client/apps/web-staff/: index.html  package.json  vite.config.ts
doc/: OBSERVABILITY.md  architecture.mmd  class_diagram.md  client_ui_pages.md  doc.md  endpoints.md  erd.mmd  service_usage.md  supplemental_docs.md  system_architecture_section.md  ui_mockups.md  ui_workflows.md
doc/activity_diagrams/: README.md
doc/activity_diagrams/analytics_reporting/: daily_report.mmd  export_report.mmd
doc/activity_diagrams/attendance/: check_in.mmd  check_out.mmd  employee_history.mmd
doc/activity_diagrams/auth/: device_activate.mmd  login.mmd  logout.mmd  me.mmd  refresh.mmd
doc/activity_diagrams/common/: ping.mmd  time.mmd
doc/activity_diagrams/device_mgmt/: create_device.mmd
doc/activity_diagrams/identity_org/: create_company.mmd  create_employee.mmd  list_companies.mmd  upload_face_data.mmd
doc/sequence_diagrams/: README.md
doc/sequence_diagrams/attendance/: check_in.mmd  (+2 more)
infra/: Makefile
infra/helm/: Makefile
server/: Makefile  docker-bake.hcl  docker-compose-nginx-dev.yml  docker-compose-observability.yml  docker-compose-with-observability.yml  docker-compose.yml  endpoint.md
server/database/: object_storage_minio.md  scylladb_queries.md
server/service_ai/: .dockerignore  .env.example  .env.service_ai  .gitignore  Dockerfile  Dockerfile.gpu  Makefile  NOTE  README.md  check_dependencies.py  docker-compose.yml  generate_grpc.sh  pyproject.toml  reindex.sh  requirements-base.txt  requirements-cpu.txt  requirements-gpu.txt  run_servers.py  test_requirements.sh
server/service_ai/app/: __init__.py  grpc_server.py  main.py
server/service_ai/app/api/: __init__.py  face_routes.py
server/service_ai/app/auth/: auth.py  auth_bearer.py
server/service_ai/app/core/: config.py  face_detector.py  face_embedding.py  liveness_detector.py  logging_config.py  tracing.py
server/service_ai/app/database/: milvus_manager.py  minio_manager.py  pg_manager.py  pgvector_manager.py  redis_manager.py  scylladb_manager.py
server/service_ai/app/dependencies/: auth_dependencies.py
server/service_ai/app/grpc/client/: attendance_client.py  auth_client.py
server/service_ai/app/grpc/server/: grpc_server.py
server/service_ai/app/grpc_generated/: __init__.py
server/service_ai/app/middleware/: auth_middleware.py  device_auth.py  require_auth.py  user_auth.py
server/service_ai/app/models/: attendance_batching_models.py  database.py  enum.py  schemas.py
server/service_ai/app/services/: attendance_batching_service.py  attendance_client.py  auth_client.py  face_service.py  faiss_manager.py  pgvector_manager.py  scylladb_manager.py  user_service.py
server/service_ai/app/utils/: cache.py  crypto.py  database.py  image_optimizer.py  utils.py
server/service_ai/examples/: README.md  scylladb_minio_example.py  usage_example.py
server/service_ai/protos/: attendance.proto  auth.proto  face_service.proto
server/service_ai/tests/: README.md  test_compatibility.py  test_integration.py  test_pgvector.py  test_pgvector_api.py  test_scylladb_company_id.py
server/service_analytic/: .gitignore  API_DOCUMENTATION.md  Dockerfile  Makefile  README.md  go.mod  go.sum  package-lock.json  package.json  proto-gen.sh  run.sh
server/service_attendance/: Dockerfile  build.sh  go.mod  go.sum  proto-gen.sh  swagger-gen.sh
server/service_auth/: .dockerignore  Dockerfile  Makefile  README.md  build.sh  cache_optimization_setup.sh  docker-compose.yml  go.mod  go.sum  proto-gen.sh
server/service_device/: Dockerfile  README.md  build.sh  go.mod  go.sum  proto-gen.sh
server/service_identity/: .env.example  .gitignore  Dockerfile  INDEX.md  README.md  TODO.md  api-examples.sh  csv_test  docker-compose.yml  dockerfile  env.example  package-lock.json  package.json  postman-collection.json  setup.sh
server/service_notify/: .gitignore  Dockerfile  README.md  build.sh  go.mod  go.sum  run.sh
server/service_profile_update/: Dockerfile  Makefile  go.mod  go.sum  sqlc.sh
server/service_signature/: .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  init-hba.sh  init.sql  package-lock.json  package.json
server/service_workforce/: Dockerfile  build.sh  go.mod  go.sum  sqlc.sh
server/service_ws_delivery/: .gitignore  Dockerfile  README.md  build.sh  go.mod  go.sum  grpc_gen.sh  run.sh
(+1144 files in other folders)
